network/unifi/routing/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: unifi-websocket
  namespace: unifi
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Host: "unifi.waushop.ee"
    accessControlAllowMethods:
      - GET
      - OPTIONS
      - POST
      - PUT
      - DELETE
      - PATCH
    accessControlAllowOriginList:
      - "https://unifi.waushop.ee"
    accessControlAllowHeaders:
      - "Content-Type"
      - "Authorization"
      - "X-Requested-With"
      - "Accept"
      - "Origin"
    accessControlAllowCredentials: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: unifi-compression
  namespace: unifi
spec:
  compress:
    excludedContentTypes:
      - text/event-stream
      - application/grpc
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: unifi-rate-limit
  namespace: unifi
spec:
  rateLimit:
    average: 100
    burst: 200
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: unifi-ip-whitelist
  namespace: unifi
spec:
  ipWhiteList:
    sourceRange:
    - "90.191.213.212/32"   # Home WAN IP
    - "46.131.89.176/32"    # Mobile IP
    - "10.0.0.0/8"
    - "192.168.0.0/16"
    - "172.16.0.0/12"
    - "85.0.0.0/8"          # Tele2 Estonia
    - "92.0.0.0/8"          # Elisa Estonia
    - "193.40.0.0/16"       # Telia Estonia
